# alby-companion-rs

./: .gitignore  Cargo.toml  README.md  build-macos.sh  manifest-chrome-windows.json  manifest-chrome.json  manifest-firefox-windows.json  manifest-firefox.json  notes.md  pre.sh
.github/workflows/: release.yml
src/: cli.rs  main.rs  messages.rs  requests.rs  test.rs  tor.rs
