[package]
name = "alby"
version = "0.4.0"
edition = "2021"
description = "The Alby companion app allows Alby to connect to nodes that run behind Tor or are otherwise not easily accessible."
homepage = "https://getalby.com/"
repository = "https://github.com/getAlby/alby-companion-rs"

[dependencies]
libtor = { version = "46.9.0", features = ["vendored-openssl"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
chrome_native_messaging = "0.2.0"
reqwest = { version = "0.11", features = ["blocking", "json", "socks"] }
chrono = "0.4"
rand = "0.8.4"
serial_test = "0.5.1"
base64 = "0.13.0"
sysinfo = "0.23.0"

[target.'cfg(not(windows))'.dependencies]
signal-hook = "0.3.13"
